# sagemaker-llm-agentic-recipes

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  requirements.txt
examples/: README.md  bedrock_sagemaker_langchain.py  sagemaker_chat_langgraph.py  workflow_jumpstart_sdk_deploy.py
notebooks/: 01_deploy_model_gpt_neox_20b.ipynb  02_inference_openai_gpt_oss_20b.ipynb  03_deploy_model_huggingface_hub.ipynb  04_deploy_model_custom_container.ipynb  05_sagemaker_chat_langgraph.ipynb  06_workflow_jumpstart_lifecycle.ipynb  README.md
scripts/: README.md  cleanup_sagemaker_endpoints.py  delete_all_endpoints.py  deploy_endpoint_deepseek_r1.py  deploy_gemma.py  validate_endpoint_inference.py
