[project]
name = "sagemaker-agentic-llm-recipes"
version = "1.0.0"
description = "Production-grade patterns for deploying OSS LLMs on AWS SageMaker and orchestrating them with LangGraph."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Kartik", email = "your-email@example.com"}
]
dependencies = [
    "sagemaker>=2.232.0",
    "langgraph",
    "langchain",
    "boto3"
]

[tool.setuptools]
packages = ["scripts", "examples"]
